--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="./assetts/css/style.css">
 </head>
 <body>
-	
+
+<div class="style">
+	<img src="./assetts/images/FullSizeRender.jpg" alt="">
+
+	<h1>Tyreek Williams</h1>
+
+	<p>My name is Tyreek Williams and I would describe myself as being a chill and relaxed person who tends to go with the flow of things. I am friendly and I like to interact with other people. I consider myself to be an independent person because when there is something that I am interested in or would like to learn more aboubt, I go out and learn about it on my own.</p>
+
+	<ul>
+		<li>Take more initiative</li>
+		<li>Study more</li>
+	</ul>
+</div>
+
+
 </body>
-</html>
+</html> 
