--- a/index.html
+++ b/index.html
@@ -20,7 +20,30 @@
 		<li>Study more</li>
 	</ul>
 </div>
+<div class="style">
+	
+	<p>Over the Weekend I went out to eat with my family. We went to a restaurant and had a great time.</p>
 
+
+</div>
+
+	<div>
+		<nav>
+	    	<ul class="nav">
+	    		<li>Home</li>
+	    		<li>About</li>
+	    		<li>Hobbies</li>
+	    		<li>Contact</li>
+	    	</ul>
+	    </nav>
+	</div>
+
+	<div class="flex">
+	Outer Div
+		<div class="flexe">div1</div>
+		<div class="flexe">div2</div>
+		<div class="flexe">div3</div>
+	</div>
 
 </body>
 </html> 
